--- a/DockerFile
+++ b/DockerFile
@@ -19,7 +19,8 @@ RUN go mod download
 COPY . .
 
 # Build the application
-RUN go build -o dist/main .
+#RUN go build -o dist/main .
+RUN go build -o dist/main
 
 # Move to /dist directory as the place for resulting binary folder
 #WORKDIR /dist
