--- a/DockerFile
+++ b/DockerFile
@@ -20,7 +20,7 @@ COPY . .
 
 # Build the application
 #RUN go build -o dist/main .
-RUN go build -o dist/main
+RUN go build
 
 # Move to /dist directory as the place for resulting binary folder
 #WORKDIR /dist
@@ -31,6 +31,6 @@ RUN go build -o dist/main
 # Export necessary port
 EXPOSE 4000
 
-
+CMD ["ls"]
 # Command to run when starting the container
-CMD ["/dist/main"]
+CMD ["main"]
